log
Sun, Sep 14, 2025  8:12:53 PM: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
eeef3b7
Sun, Sep 14, 2025  8:19:35 PM: 
 hashmap.c | 55 ++++++++++++++++++++++++++++++++++++++++---------------
 1 file changed, 40 insertions(+), 15 deletions(-)
 tests:  1|5
total_score: 10/70
8f5a350
Sun, Sep 14, 2025  8:23:33 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
c43fc3d
Sun, Sep 14, 2025  8:36:51 PM: 
 hashmap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
af6bb0f
Sun, Sep 14, 2025  9:07:39 PM: 
 hashmap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
5e1eb2a
Sun, Sep 14, 2025  9:14:37 PM: 
 hashmap.c | 26 +++++++++++++++++++-------
 1 file changed, 19 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:175:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
98dcd2e
Sun, Sep 14, 2025  9:14:53 PM: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  16|1
total_score: 60/70
35f1717
Sun, Sep 14, 2025  9:15:12 PM: 
 hashmap.c | 15 ---------------
 1 file changed, 15 deletions(-)
Compilation failed
C:\Users\felip\AppData\Local\Temp\ccsW25ur.o: In function `next_test':
C:\Users\felip\OneDrive\Escritorio\lab3\lab-3-tablas-hash-Pipe240/test.c:394: undefined reference to `nextMap'
C:\Users\felip\OneDrive\Escritorio\lab3\lab-3-tablas-hash-Pipe240/test.c:407: undefined reference to `nextMap'
C:\Users\felip\OneDrive\Escritorio\lab3\lab-3-tablas-hash-Pipe240/test.c:416: undefined reference to `nextMap'
collect2.exe: error: ld returned 1 exit status
0540bb6
Sun, Sep 14, 2025  9:15:21 PM: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  16|1
total_score: 60/70
f3a3789
